<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingTop="10dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="15dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                xmlns:tools="http://schemas.android.com/tools">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_margin="15dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/idNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_id_number"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:inputType="number"
                        android:textSize="20sp"
                        android:layout_margin="15dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/registrationNumerEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_reg_number"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_margin="15dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_margin="15dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/phoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_margin="15dp"
                        android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"/>

            </LinearLayout>


        </ScrollView>



    </android.support.v7.widget.CardView>





</RelativeLayout>